feat: slot select algorithm

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": "explicit"
     },
-    "editor.formatOnSave": false,
+    "editor.formatOnSave": true,
     "files.autoSave": "off"
 }
