--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "prettier": "3.2.4"
+    "package": "^1.0.1",
+    "prettier": "3.2.4",
+    "tailwindcss": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
