--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.18",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "firebase": "^10.8.0",
+    "flowbite-react": "^0.7.2",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
