--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.6",
     "@mui/x-date-pickers": "^6.19.5",
+    "@tanstack/react-query": "^5.25.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.18",
+    "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "firebase": "^10.8.0",
