--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/runtime": "^7.23.9",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.168",
     "@mui/material": "^5.15.6",
     "@mui/x-date-pickers": "^6.19.5",
     "@tanstack/react-query": "^5.25.0",
@@ -20,6 +21,8 @@
     "flowbite-react": "^0.7.2",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
