--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-calendar": "^4.8.0",
     "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
