--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,58 +1,40 @@
-# Reference
-# https://solo5star.tistory.com/36
-
-name: Deploy
+name: Build and Push user-service
 
 on:
   push:
-    branches: ['main']
-  workflow_dispatch:
+    branches:
+      - main
+
+env:
+  ORG_NAME: hufs-hexagon-talent
+  PROJECT_NAME: study-room-reservation
+  SERVICE_NAME: user-app
 
 jobs:
-  deploy:
+  build-and-push:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    concurrency:
-      group: ${{ github.workflow }}
-      cancel-in-progress: true
-
     steps:
-      - name: Use repository source
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Use node.js
-        uses: actions/setup-node@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          node-version: 18
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Cache node_modules
-        id: cache
-        uses: actions/cache@v3
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-        if: steps.cache.outputs.cache-hit != 'true'
-
-      - name: Set PUBLIC_URL
-        run: |
-          PUBLIC_URL=$(echo $GITHUB_REPOSITORY | sed -r 's/^.+\/(.+)$/\/\1\//')
-          echo PUBLIC_URL=$PUBLIC_URL > .env
-
-      - name: Build
-        env:
-          REACT_APP_BASEURL: /studyroom-reservation
-        run: |
-          yarn build
-          cp ./build/index.html ./build/404.html
-
-      - name: Deploy to gh-pages branch
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          file: ./Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ env.ORG_NAME }}/${{ env.PROJECT_NAME }}-${{ env.SERVICE_NAME }}:${{ github.sha }}
+            ${{ github.ref == 'refs/heads/main' && format('ghcr.io/{0}/{1}-{2}:latest', env.ORG_NAME, env.PROJECT_NAME, env.SERVICE_NAME) || '' }}
+          platforms: linux/amd64 #, linux/arm64/v8
