--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,7 @@
 http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
     server {
         listen 80;
         location / {
