--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-calendar": "^5.0.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
