--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
