--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
     "flowbite-react": "^0.9.0",
+    "inko": "^1.1.1",
     "postcss": "^8.4.38",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
