--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-simple-snackbar": "^1.1.11",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.11",
     "web-vitals": "^4.0.1"
   },
